tdf#143796 Qt5/KF5 fix double-buffer graphics

This is a squashed commit for:

"Qt5/KF5 get rid of unneeded own grahics handling"
"tdf#143334 Qt5 don't reset buffer on style change"
"tdf#144008 Qt5/Kf5 create frames in the GUI thread"

commit 963f252cd1ea9c268a6ced68a3454b10cbee1a89
commit ec77a2ed0283cb3446f6e352fc329afd3dfb785c
commit 923b30aa27ceb377d6a540c012000e89ce5db31e

The first commit exposed the same problem to kf5, the 2nd patch is
the real fix and the 3rd partly a regression for kf5 from the 1st
commit but also an additional bugfix for qt5.

Change-Id: I84b8dd106a35a5c2fda08a525f657b0b733a5cb7